Bug fix again removing the overflow on the y for scroll access.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@
   }
 
   body {
-    overflow-y: hidden; /* Hide vertical scrollbar */
     overflow-x: hidden; /* Hide horizontal scrollbar */
   }
 }
